# Red-Moon

./: Cargo.toml  README.md
crates/red_moon/: Cargo.toml
crates/red_moon/src/: lib.rs
crates/red_moon/src/errors/: illegal_instruction.rs  lua_compilation_error.rs  native_error.rs  runtime_error_data.rs  stack_trace.rs  syntax_error.rs
crates/red_moon/src/interpreter/: byte_string.rs  cache_pools.rs  coroutine.rs  coroutine_ref.rs  execution.rs  function_ref.rs  instruction.rs  interpreted_function.rs  lazy_arg.rs  metatable_keys.rs  mod.rs  multi.rs  multivalue.rs  native_function.rs  number.rs  table.rs  table_ref.rs  up_values.rs  value.rs  value_stack.rs  value_traits.rs  vm.rs
crates/red_moon/src/interpreter/heap/: garbage_collector.rs  mod.rs  ref_counter.rs
crates/red_moon/src/languages/: lexer.rs
crates/red_moon/src/languages/lua/: lua_compiler.rs  lua_lexer.rs  lua_parsing.rs  lua_token.rs  mod.rs
crates/red_moon/src/languages/lua/std/: basic.rs  coroutine.rs  math.rs  os.rs  string.rs  table.rs
crates/red_moon/tests/: lua.rs  serde.rs  vm.rs
crates/red_moon/tests/lua/invalid/: too_many_locals.lua.txt
crates/red_moon/tests/lua/valid/: coroutines.lua  expressions.lua  expressions.lua.expected  functions.lua.expected  garbage_collection.lua  loops.lua  metatables.lua  munchausen_numbers.lua  semicolons.lua  tables.lua.txt  tables.lua.txt.expected
crates/red_moon_cli/: Cargo.toml
crates/red_moon_cli/src/: main.rs
crates/red_moon_mlua/: Cargo.toml
crates/red_moon_mlua/src/: conversion.rs  error.rs  function.rs  lib.rs  lua.rs  multi.rs  scope.rs  value.rs
crates/red_moon_mlua/src/serde/: mod.rs
red_moon_cli/: Cargo.toml
red_moon_cli/src/: main.rs
red_moon_mlua/: Cargo.toml  README.md
red_moon_mlua/benches/: benchmark.rs
red_moon_mlua/src/: app_data.rs  chunk.rs  function.rs  multi.rs  stdlib.rs  string.rs  table.rs  thread.rs  types.rs  value.rs
red_moon_mlua/src/serde/: de.rs  ser.rs
scripts/: hyperfine.sh
src/: lib.rs  serde_util.rs  vec_cell.rs
src/errors/: mod.rs  runtime_error.rs
src/interpreter/: coroutine.rs  debug_hooks.rs  execution.rs  function_ref.rs  instruction.rs  instruction_metrics.rs  mod.rs  module.rs  native_function.rs  string_ref.rs  table.rs  value.rs  vm.rs
src/interpreter/heap/: garbage_collector.rs  heap_ref.rs  mod.rs
src/languages/: line_and_col.rs  mod.rs  token.rs
src/languages/lua/std/: basic.rs  coroutine.rs  debug.rs  mod.rs  os.rs  string.rs  table.rs
tests/: coroutines.rs  lua.rs  rollback.rs  serde.rs  vm.rs
tests/lua/invalid/: assign_const.lua.txt  goto_jump_inner_scope.lua.txt  goto_jump_local_scope.lua.txt  unexpected_name_after_return.lua.txt  unexpected_semicolon_after_return.lua.txt
tests/lua/runtime_error/: divide_by_zero.lua.txt
tests/lua/valid/: coroutines.lua.expected  debug.lua  debug.lua.expected  functions.lua  garbage_collection.lua.expected  goto.lua  goto.lua.expected  loops.lua  loops.lua.expected  metatables.lua.expected  variables.lua.txt  variables.lua.txt.expected
