[workspace]
resolver = "2"
members = ["crates/red_moon", "crates/red_moon_cli", "crates/red_moon_mlua"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

[profile.performance]
inherits = "release"
strip = true

[profile.profiling]
inherits = "release"
debug = "limited"

[workspace.lints.clippy]
redundant_closure = "allow"
type_complexity = "allow"
