[workspace]
resolver = "2"
members = ["red_moon_cli", "red_moon_mlua"]

[workspace.package]
version = "0.1.0"

[package]
name = "red_moon"
version.workspace = true
edition = "2021"

[dependencies]
indexmap = "2"
slotmap = "1"
downcast = "0.11"
cpu-time = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"], optional = true }
thin-vec = { version = "0.2", features = ["serde"] }
erasable = "1"
slice-dst = "1"
bitflags = "2"

[dev-dependencies]
pretty_assertions = "1"
bincode = "1"
rmp-serde = "1"
ron = "0.8"

[features]
# separate feature as it affects performance
instruction_metrics = []
serde = ["dep:serde", "slotmap/serde", "indexmap/serde"]
default = ["serde"]

[lints]
workspace = true

[workspace.lints.clippy]
redundant_closure = "allow"
type_complexity = "allow"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

[profile.performance]
inherits = "release"
strip = true

[profile.profiling]
inherits = "release"
debug = "limited"
