[package]
name = "red_moon_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
red_moon = { path = "../red_moon" }
clap = { version = "4", features = ["derive"] }
rustyline = { version = "14", default-features = false }

[features]
# separate feature as it slows down the interpreter
instruction_exec_counts = ["red_moon/instruction_exec_counts"]
default = []

[lints]
workspace = true
