[package]
name = "red_moon_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
red_moon = { path = "../red_moon" }
clap = { version = "4", features = ["derive"] }
rustyline = { version = "14", default-features = false }
tabled = { version = "0.19", optional = true }

[features]
# separate feature as it affects performance
instruction_metrics = ["red_moon/instruction_metrics", "dep:tabled"]
default = []

[lints]
workspace = true
