[package]
name = "red_moon_mlua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
red_moon = { path = "../red_moon" }
num-traits = "0.2"
bstr = "1"
serde = { version = "1.0", optional = true }
erased-serde = { version = "0.3", optional = true }
serde-value = { version = "0.7", optional = true }
rustc-hash = { version = "2", optional = true }
slotmap = "1"

[dev-dependencies]
criterion = { version = "0.5", features = [] }
static_assertions = "1.0"

[features]
unstable = []
serialize = ["rustc-hash", "serde", "erased-serde", "serde-value"]
default = ["serialize"]

[[bench]]
name = "benchmark"
harness = false
required-features = []
